Reduce complexity of B2B interface (by going from Array to String for `orderLinesData`)
