# routes/b2bOrder.js
@@ -6,29 +6,25 @@ const challenges = require('../data/datacache').challenges
 
 exports = module.exports = function b2bOrder () {
   return (req, res, next) => {
-    const orderLinesData = req.body.orderLinesData || []
-    orderLinesData.forEach(orderLineData => {
-      try {
-        const sandbox = { safeEval, orderLineData }
-        vm.createContext(sandbox)
-        vm.runInContext('safeEval(orderLineData)', sandbox, { timeout: 2000 })
-      } catch (err) {
-        if (err.message === 'Infinite loop detected - reached max iterations') {
-          if (utils.notSolved(challenges.rceChallenge)) {
-            utils.solve(challenges.rceChallenge)
-          }
-          next(err)
-        } else if (err.message === 'Script execution timed out.') {
-          if (utils.notSolved(challenges.rceOccupyChallenge)) {
-            utils.solve(challenges.rceOccupyChallenge)
-          }
-          if (res && res.status) {
-            res.status(503)
-          }
-          next(new Error('Sorry, we are temporarily not available! Please try again later.'))
+    const orderLinesData = req.body.orderLinesData || ''
+    try {
+      const sandbox = { safeEval, orderLinesData }
+      vm.createContext(sandbox)
+      vm.runInContext('safeEval(orderLinesData)', sandbox, { timeout: 2000 })
+    } catch (err) {
+      if (err.message === 'Infinite loop detected - reached max iterations') {
+        if (utils.notSolved(challenges.rceChallenge)) {
+          utils.solve(challenges.rceChallenge)
         }
+        next(err)
+      } else if (err.message === 'Script execution timed out.') {
+        if (utils.notSolved(challenges.rceOccupyChallenge)) {
+          utils.solve(challenges.rceOccupyChallenge)
+        }
+        res.status(503)
+        next(new Error('Sorry, we are temporarily not available! Please try again later.'))
       }
-    })
+    }
     res.json({ cid: req.body.cid, orderNo: uniqueOrderNumber(), paymentDue: dateTwoWeeksFromNow() })
   }
 
